--- a/static/css/cssvr.css
+++ b/static/css/cssvr.css
@@ -490,9 +490,53 @@ margin-top:60px;
         display: flex;
         flex-direction: column;
     }
+
+    .accountForm {
+        max-width: 100%;
+    }
+
+    .subForm {
+        max-width: 100%;
+    }
     
     .sidebar {
         margin-bottom: 15px;
+    }
+    
+    .ship {
+        margin: 0 0 30px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .ship span {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+    }
+    
+    .bill {
+        margin: 0 0 30px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .bill span {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+    }
+    
+    .pay {
+        margin: 0 0 30px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .pay span {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
     }
 
     .subOptions {
@@ -500,34 +544,6 @@ margin-top:60px;
         display: grid;
         grid-template-columns: 0.5fr 0.5fr;
         grid-column-gap: 60px;
-    }
-
-    .promo {
-        margin: 0;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-row-gap: 10px;
-    }    
-
-    .ship {
-        margin: 30px 0 0;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-row-gap: 10px;
-    }
-
-    .bill {
-        margin: 30px 0 0;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-row-gap: 10px;
-    }
-
-    .pay {
-        margin: 30px 0 0;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-row-gap: 10px;
     }
 
     .update {
@@ -540,6 +556,21 @@ margin-top:60px;
         padding: 15px 30px;
         background: #404040;
         color: #E0E0E0;
+    }
+
+    .subOptions {
+        margin: 20px 0;
+        display: grid;
+        grid-template-columns: 0.5fr 0.5fr;
+        grid-column-gap: 10px;
+    }
+
+    .subButton {
+        font-size: 12px;
+        letter-spacing: 2px;
+        font-weight: 600;
+        line-height: 20px;
+        padding: 5px 10px;
     }
 
 #form{
